examples/test/testpolicy16405.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16405
  namespace: namespace438
spec:
  podSelector:
    matchLabels:
      key19: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value21
          key23: value37
          key18: value45
      podSelector:
        matchLabels:
          key1: value37
          key40: value37
